; ModuleID = '/home/carl/AnghaBench/zstd/tests/extr_fullbench.c_local_ZSTD_decodeLiteralsBlock.c'
source_filename = "/home/carl/AnghaBench/zstd/tests/extr_fullbench.c_local_ZSTD_decodeLiteralsBlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_zdc = common dso_local global i32 0, align 4
@g_cSize = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i64, i8*, i64, i8*)* @local_ZSTD_decodeLiteralsBlock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @local_ZSTD_decodeLiteralsBlock(i8* %0, i64 %1, i8* %2, i64 %3, i8* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = load i64, i64* %9, align 8
  %15 = load i32, i32* @g_zdc, align 4
  %16 = load i8*, i8** %10, align 8
  %17 = load i32, i32* @g_cSize, align 4
  %18 = call i64 @ZSTD_decodeLiteralsBlock(i32 %15, i8* %16, i32 %17)
  ret i64 %18
}

declare dso_local i64 @ZSTD_decodeLiteralsBlock(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
